deleted part about downloading the output, since it should download automatically

--- a/storage-describe.ipynb
+++ b/storage-describe.ipynb
@@ -86,13 +86,7 @@
     "\n",
     "*(Note: QGIS layers files with large amounts of tiles can be slow to generate and even slower to open in QGIS. You may want to limit the number of layers generated using an AOI or date range.)*\n",
     "\n",
-    "**Click [here](outputs/san_francisco.qlr) to access the example output.**\n",
-    "\n",
-    "You should see a view like this:\n",
-    "\n",
-    "![assets/browser-view.png](assets/browser-view.png)\n",
-    "\n",
-    "Click the button to the left of the file `san_francisco.qlr` to check it (now it should look like the image), and then click the `Download` button.\n",
+    "**Click [here](outputs/san_francisco.qlr) to download the example output.**\n",
     "\n",
     "Now open QGIS and, as shown in the image below, navigate to the `Layer` menu and click on `Add from Layer Definition File...`.\n",
     "\n",
