added message about layers taking a long time to load

--- a/storage-describe.ipynb
+++ b/storage-describe.ipynb
@@ -92,7 +92,7 @@
     "\n",
     "![assets/qgis-add-from-layer-defn-file.png](assets/qgis-add-from-layer-defn-file.png)\n",
     "\n",
-    "This will open a file browser; navigate to your `Downloads` folder, click on `san_francisco.qlr`, and click `Open`.\n",
+    "This will open a file browser; navigate to your `Downloads` folder, click on `san_francisco.qlr`, and click `Open`. Don't worry if the layers take a while to load; this is normal.\n",
     "\n",
     "Now the example QGIS layers should show up in your `Layers` panel (see image below). They will be unchecked when you bring them in, so nothing will show up on your map canvas until you check one or more groups. Click on the little arrows on the left of each group to expand it and check/uncheck the layers inside.\n",
     "\n",
