--- a/storage-describe.ipynb
+++ b/storage-describe.ipynb
@@ -10,12 +10,12 @@
     "\n",
     "Returns info about ARD tiles store in LOCATION. Location can be S3 or local. Currently only gives a basic overview of contents.\n",
     "\n",
-    "--`format` Output format, \"qlr\" for QGIS Layer Definition<br/>\n",
-    "--`aoi` Geometry to filter tiles to, only WKT supported.<br/>\n",
-    "--`cat_id` Limit result to this Catalog ID (can use more than once)<br/>\n",
-    "--`zone` Limit tiles to those in this zone. Can be used multiple times. This option can speed up scan time of large collections.<br/>\n",
-    "--`earliest_date` Return results from on or after this date (YYYY-MM-DD)<br/>\n",
-    "--`latest_date` Return results from this date or earlier (YYYY-MM-DD)\n",
+    "`--format` Output format, \"qlr\" for QGIS Layer Definition<br/>\n",
+    "`--aoi` Geometry to filter tiles to, only WKT supported.<br/>\n",
+    "`--cat_id` Limit result to this Catalog ID (can use more than once)<br/>\n",
+    "`--zone` Limit tiles to those in this zone. Can be used multiple times. This option can speed up scan time of large collections.<br/>\n",
+    "`--earliest_date` Return results from on or after this date (YYYY-MM-DD)<br/>\n",
+    "`--latest_date` Return results from this date or earlier (YYYY-MM-DD)\n",
     "\n",
     "The following example uses sample ARD data:"
    ]
@@ -54,6 +54,51 @@
     "Latest date: 2019-07-12\n",
     "UTM zone: 10\n",
     "```\n",
+    "\n",
+    "To filter dates, use the `--earliest_date` and/or `--latest_date` options, like this:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Examining ARD data in s3://maxar-ard-samples/sample-001/...\n",
+      "1 acquisition\n",
+      "2 tiles\n",
+      "Earliest date: 2019-05-21\n",
+      "Latest date: 2019-05-21\n",
+      "UTM zone: 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "!max-ard storage describe --public --earliest_date 2019-03-01 --latest_date 2019-06-01 s3://maxar-ard-samples/sample-001/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "Examining ARD data in s3://maxar-ard-samples/sample-001/...\n",
+    "1 acquisition\n",
+    "2 tiles\n",
+    "Earliest date: 2019-05-21\n",
+    "Latest date: 2019-05-21\n",
+    "UTM zone: 10\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(In the example below we remove the date filters.) \n",
     "\n",
     "To generate a QGIS layer definition of the files stored in S3, add `--format qlr` and send the output to the file of choice:"
    ]
