update convert_to_shapely_shape to convert_to_shapely

--- a/woven_alpha.ipynb
+++ b/woven_alpha.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b60a212d",
+   "id": "2e4c01ba",
    "metadata": {},
    "source": [
     "In this notebook, we'll walk through the process of starting with a shapefile of an AOI (area of interest) where there has been change over time, creating `Select` objects for `before` and `after` periods, and visualizing our AOI and `Select` objects."
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a13feef",
+   "id": "10836a22",
    "metadata": {},
    "source": [
     "Before we do anything else, let IPython know not to cut off any of our cell outputs:"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1a1c641",
+   "id": "b46a0ff1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdfce89f",
+   "id": "e3a3d72b",
    "metadata": {},
    "source": [
     "Run the necessary imports:"
@@ -38,16 +38,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ddc2b34e",
+   "id": "f4b808df",
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
     "from vizard import enter_ard_creds, display_aoi_viz, generate_iframe_html, display_result_tiles\n",
-    "from max_ard.io.inputs import convert_to_shapely_shape\n",
+    "from max_ard.io.inputs import convert_to_shapely\n",
     "from max_ard.select import ard_bbox_generator\n",
-    "from max_ard import Select, ARDCollection\n",
+    "from max_ard import Select\n",
     "from IPython.core.getipython import get_ipython\n",
     "from warnings import catch_warnings, simplefilter\n",
     "import webbrowser"
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20aabadd",
+   "id": "734b521a",
    "metadata": {},
    "source": [
     "When you run this cell you will be prompted to enter your ARD credentials (you need to be authenticated in order to run the rest of this notebook):"
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60274a24",
+   "id": "d583676b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5342c74f",
+   "id": "970b7cce",
    "metadata": {},
    "source": [
     "Now on to the interesting stuff!\n",
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32710ca6",
+   "id": "52e4346f",
    "metadata": {},
    "source": [
     "Convert your AOI geometry into an acceptable input for a `Select`:"
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a68b4f54",
+   "id": "63e528f2",
    "metadata": {
     "scrolled": false
    },
@@ -101,9 +101,7 @@
     "aoi = '../apac-notebooks/Los_Angeles/select_2017.shp' # path to multipolygon shapefile\n",
     "\n",
     "# conver the shapefile to a Shapely shape\n",
-    "# shapely_aoi = convert_shp_gpkg_to_shapely(aoi)\n",
-    "shapely_aoi = convert_to_shapely_shape(aoi)\n",
-    "# print('\\n\\n' + str(shapely_aoi))\n",
+    "shapely_aoi = convert_to_shapely(aoi)\n",
     "\n",
     "# now run the shape through ard_bbox_generator to get it in an acceptable format for a Select input\n",
     "fixed_aoi = ard_bbox_generator(shapely_aoi)"
@@ -111,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ec21de7",
+   "id": "93979d25",
    "metadata": {},
    "source": [
     "Take a look at your `Select`-ready AOI geometry:"
@@ -120,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9813bab2",
+   "id": "9e6c0516",
    "metadata": {
     "scrolled": true
    },
@@ -131,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c86c63b1",
+   "id": "34d13ac6",
    "metadata": {},
    "source": [
     "Specify the beginning and ending dates you'd like to search within:"
@@ -140,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fedce778",
+   "id": "edca064b",
    "metadata": {
     "scrolled": false
    },
@@ -155,7 +153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "349438f0",
+   "id": "3a692c19",
    "metadata": {},
    "source": [
     "Enter the stack depth you're looking for:"
@@ -164,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4050c5f",
+   "id": "81f198e0",
    "metadata": {
     "scrolled": false
    },
@@ -175,7 +173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33022269",
+   "id": "c82ebaaa",
    "metadata": {},
    "source": [
     "Specify the minimum cloud-free percentage and minimum data percentage you'd like:"
@@ -184,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e613363",
+   "id": "66b5e09e",
    "metadata": {
     "scrolled": false
    },
@@ -196,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1f5d98f",
+   "id": "678ea8d5",
    "metadata": {},
    "source": [
     "Now we'll construct the query using the variables you defined above:"
@@ -205,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a75347e",
+   "id": "099791a1",
    "metadata": {
     "scrolled": false
    },
@@ -229,7 +227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b583ba1b",
+   "id": "065bc422",
    "metadata": {},
    "source": [
     "Run the following cell to see the full request objects if you're curious:"
@@ -238,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dac31718",
+   "id": "c0b2a121",
    "metadata": {
     "scrolled": false
    },
@@ -250,7 +248,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "446ca97a",
+   "id": "47e929c3",
    "metadata": {},
    "source": [
     "Now we're ready to submit the requests:"
@@ -259,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2d4abe4",
+   "id": "9846da33",
    "metadata": {
     "scrolled": false
    },
@@ -276,7 +274,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fcb03e9",
+   "id": "23b394ee",
    "metadata": {},
    "source": [
     "Save the `Select ID`s as variables:"
@@ -285,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f01bc5ea",
+   "id": "9b33f46e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "422630df",
+   "id": "2e40507b",
    "metadata": {},
    "source": [
     "We're about to visualize the `Select` objects. First, adjust the pixel dimensions and alignments of the iframes for your `before` and `after` `Select` objects if you'd like."
@@ -304,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59421c23",
+   "id": "0d0ccef9",
    "metadata": {
     "scrolled": false
    },
@@ -322,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "534bc6e7",
+   "id": "00a99c88",
    "metadata": {},
    "source": [
     "Run this cell to generate your visualizations:"
@@ -331,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36da58e9",
+   "id": "d65fff4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +350,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b949d0a",
+   "id": "0b10c690",
    "metadata": {},
    "source": [
     "Now let's output the visualizations into the notebook:"
@@ -361,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "616ef7bf",
+   "id": "289301ca",
    "metadata": {
     "scrolled": false
    },
@@ -378,7 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15bfdbc7",
+   "id": "9c32ae56",
    "metadata": {},
    "source": [
     "Uncomment the code in this cell and run it if you'd like to open your `Select` visualizations in new tabs for further exploration."
@@ -387,7 +385,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a94a3b6",
+   "id": "d9dcc8d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +398,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f5d83e3",
+   "id": "5bdeb093",
    "metadata": {},
    "source": [
     "Run this cell to see a comparison of \"before\" and \"after\" imagery from the cell where our AOI best fits."
@@ -409,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a59c931f",
+   "id": "210b49bd",
    "metadata": {},
    "outputs": [],
    "source": [
