change path to shapefile

--- a/woven_alpha.ipynb
+++ b/woven_alpha.ipynb
@@ -18,10 +18,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b46a0ff1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "IPython.OutputArea.prototype._should_scroll = lines => false;\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%javascript\n",
     "IPython.OutputArea.prototype._should_scroll = lines => false;"
@@ -37,12 +50,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f4b808df",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'convert_to_shapely' from 'max_ard.io.inputs' (/Users/majacannavo/Documents/maxar/max-ard/max_ard/io/inputs.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-52409356db34>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mvizard\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0menter_ard_creds\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdisplay_aoi_viz\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgenerate_iframe_html\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdisplay_result_tiles\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mmax_ard\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mio\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minputs\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mconvert_to_shapely\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mmax_ard\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mselect\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mard_bbox_generator\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mmax_ard\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mSelect\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mIPython\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcore\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetipython\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'convert_to_shapely' from 'max_ard.io.inputs' (/Users/majacannavo/Documents/maxar/max-ard/max_ard/io/inputs.py)"
+     ]
+    }
+   ],
    "source": [
     "from vizard import enter_ard_creds, display_aoi_viz, generate_iframe_html, display_result_tiles\n",
     "from max_ard.io.inputs import convert_to_shapely\n",
@@ -98,7 +123,7 @@
    },
    "outputs": [],
    "source": [
-    "aoi = '../apac-notebooks/Los_Angeles/select_2017.shp' # path to multipolygon shapefile\n",
+    "aoi = './sample-shp/select_2017.shp' # path to multipolygon shapefile\n",
     "\n",
     "# conver the shapefile to a Shapely shape\n",
     "shapely_aoi = convert_to_shapely(aoi)\n",
